--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "node-latest-version": "^1.0.16",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "update-node": "^0.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
