--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
-    "@angular/material": "^9.1.2",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "node-latest-version": "^1.0.16",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "update-node": "^0.1.0",
