--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "ktr-app"
+  "defaultProject": "ktr-app",
+  "cli": {
+    "analytics": "62c27a30-5d4b-4f70-83eb-e4c33eaa5e71"
+  }
 }
