--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "angular-material": "^1.1.21",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "node-latest-version": "^1.0.16",
