--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "angular-material": "^1.1.21",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "node-latest-version": "^1.0.16",
     "npm": "^6.14.4",
     "popper.js": "^1.16.1",
+    "request": "^2.88.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "update-node": "^0.1.0",
