--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
+    "mariadb": "^2.3.1",
     "node-latest-version": "^1.0.16",
     "npm": "^6.14.4",
     "popper.js": "^1.16.1",
